--- a/readme.html
+++ b/readme.html
@@ -1,2 +1,7 @@
+<b>Theme and plugin setup</b>
 Activate the "parai" theme (if has not been activated) under Appearance > themes.
 Activate the plugins "CMB2" and "CMB2 Field Type: Google Maps" under Admin > Plugins.
+
+<b>Create Articles</b>
+Add new Article under Articles > Add New
+
