--- a/readme.html
+++ b/readme.html
@@ -1,7 +1,13 @@
-<b>Theme and plugin setup</b>
+--Theme and plugin setup
 Activate the "parai" theme (if has not been activated) under Appearance > themes.
 Activate the plugins "CMB2" and "CMB2 Field Type: Google Maps" under Admin > Plugins.
 
-<b>Create Articles</b>
+--Create Articles
 Add new Article under Articles > Add New
+Add title, some description, images, videos and a featured image (on the right sidebar)
+Notice 2 custom meta boxes called "Location:" at the bottom. 
+The first Location works and is a temporary solution until we get the Google Maps API.
+
+
+
 
