--- a/readme.html
+++ b/readme.html
@@ -16,12 +16,14 @@ Save article
 --The front-end   
 The Articles are shown in the frontend as cards.
 There is a map at the bottom. 
-The map contains an example interaction. When the red marker is clicke, additional information is displayed.
+The map contains an example interaction. When the red marker is click, additional information is displayed.
 ** check wp-content > themes > index.php to see how this is coded **
 
 
 --YOUR TASK--
-- In the front end, Create marker for each Article in Googlge Map using the Lat Long Values of each of the article.
+- In the front end, Create markers for each of the Articles in Googlge Map using respective Lat Long Values.
+- When clicked on the marker, it should show the featured image and the title of the Article.
+- You can do this in many ways. (see google map api documentation: https://developers.google.com/maps/documentation/javascript/add-google-map-wc-tut#key )
 
 
 
