--- a/readme.html
+++ b/readme.html
@@ -23,7 +23,7 @@ The map contains an example interaction. When the red marker is click, additiona
 --YOUR TASK--
 - In the front end, Create markers for each of the Articles in Googlge Map using respective Lat Long Values.
 - When clicked on the marker, it should show the featured image and the title of the Article.
-- You can do this in many ways. (see google map api documentation: https://developers.google.com/maps/documentation/javascript/add-google-map-wc-tut#key )
+- You can do this in two ways. See google map api documentation for details: https://developers.google.com/maps/documentation/javascript/add-google-map-wc-tut#key )
 
 
 
