--- a/readme.html
+++ b/readme.html
@@ -15,16 +15,19 @@ Save article
 
 --The front-end   
 The Articles are shown in the frontend as cards.
-There is a map at the bottom. 
-The map contains an example interaction. When the red marker is click, additional information is displayed.
+There is also a map. 
+The map contains example interaction. When the red marker is click, additional information is displayed.
 ** check wp-content > themes > index.php to see how this is coded **
 
 
 --YOUR TASK--
 - In the front end, Create markers for each of the Articles in Googlge Map using respective Lat Long Values.
 - When clicked on the marker, it should show the featured image and the title of the Article.
-- You can do this in two ways. See google map api documentation for details: https://developers.google.com/maps/documentation/javascript/add-google-map-wc-tut#key )
 
+- You can code this in many ways. See google map api documentation for details: 
+https://developers.google.com/maps/documentation/javascript/add-google-map-wc-tut#key
+https://developers.google.com/maps/documentation/javascript/examples/advanced-markers-html 
+https://developers.google.com/maps/documentation/javascript/examples/advanced-markers-accessibility 
 
 
 
